@@ -4,30 +4,22 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-A CONTENT CATEGORY="An Article Category"
-ARTICLE TITLE="Article Title"
-CATEGORY="Category"
-DESCNEWSFLASH="The Newsflash Module will either randomly display one article OR display a fixed number of articles in a horizontal or vertical configuration."
-DISPLAY ARTICLE IMAGES="Display Article images"
-HORIZONTAL="Horizontal"
-ITEM TITLE="Article Title"
-LAYOUT="Layout"
-LINKED TITLES="Title Linkable"
-MAKE THE ITEM TITLES LINKABLE="Make the Article titles linkable to open the actual Article."
+MOD_NEWSFLASH_FIELD_CATEGORY_DESC="Select Article Category"
+MOD_NEWSFLASH_FIELD_TITLE_LABEL="Article Title"
+MOD_NEWSFLASH_FIELD_CATEGORY_LABEL="Category"
+MOD_NEWSFLASH_XML_DESCRIPTION="The Newsflash Module will display a fixed number of articles froma specific category."
+MOD_NEWSFLASH_FIELD_IMAGES_DESC="Display Article images"
+MOD_NEWSFLASH_FIELD_LINKTITLE_LABEL="Title Linkable"
+MOD_NEWSFLASH_FIELD_LINKTITLE_DESC="Make the Article titles linkable to open the actual Article."
 MOD_NEWSFLASH="Articles - Newsflash"
+MOD_NEWSFLASH_FIELD_ITEMS_DESC="The number of Articles to display within this Module"
+MOD_NEWSFLASH_FIELD_ITEMS_LABEL="# of Articles"
+MOD_NEWSFLASH_FIELD_READMORE_LABEL="Read more... Link"
+MOD_NEWSFLASH_FIELD_TITLE_DESC="Show/hide Article Title"
+MOD_NEWSFLASH_FIELD_IMAGES_LABEL="Show Images"
+MOD_NEWSFLASH_FIELD_READMORE_DESC="Show/Hide the Read more..."
+MOD_NEWSFLASH_FIELD_SEPARATOR_LABEL="Show last separator"
+MOD_NEWSFLASH_FIELD_SEPARATOR_DESC="Show separator after last article"
+MOD_NEWSFLASH_READMORE="Read more..."
+MOD_NEWSFLASH_READMORE_REGISTER="Register to Read More"
 NEWSFLASH="Newsflash"
-NO OF ITEMS TO DISPLAY="The number of Articles to display within this Module"
-NO. OF ITEMS="# of Articles"
-RANDOMLY CHOOSE ONE AT A TIME="Randomly choose one at a time"
-READ MORE="Read more... Link"
-READ MORE TEXT="Read more..."
-REGISTER TO READ MORE="Register to Read More"
-SELECT CONTENT CATEGORY="Select Article Category"
-SHOW ARTICLE TITLE="Show Article Title"
-SHOW IMAGES="Show Images"
-SHOW ITEM TITLE="Show Item Title"
-SHOW/HIDE THE READ MORE BUTTON="Show/Hide the Read more..."
-SHOW LAST SEPARATOR="Show last separator"
-SHOW SEPARATOR AFTER LAST ARTICLE="Show separator after last article"
-THE LAYOUT TO DISPLAY THE CATEGORY="The layout form in which to display the Category"
-VERTICAL="Vertical"
